package castor;

message HeartBeat {
 required int64 bytesMoved = 1;
}
